updates to dash app formatting

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -28919,13 +28919,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name           vm.box\n",
+       "price_usd   31,481.47\n",
+       "price_eth       10.00\n",
+       "Name: 2024-04-27 16:00:00+00:00, dtype: object"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_eth_sale_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_eth_sale_details = {\n",
+    "    \"name\": max_eth_sale_row[\"name\"],\n",
+    "    \"price_usd\": max_eth_sale_row[\"price_usd\"],\n",
+    "    \"price_eth\": max_eth_sale_row[\"price_eth\"],\n",
+    "    \"date\": max_eth_sale_row.name  # This is the index (timestamp)\n",
+    "}\n",
+    "\n",
+    "highest_sold_domain_str = f\"\"\"\n",
+    "Name: {max_eth_sale_details['name']}\n",
+    "Price (USD): ${max_eth_sale_details['price_usd']:.2f}\n",
+    "Price (ETH): {max_eth_sale_details['price_eth']}\n",
+    "Date: {max_eth_sale_details['date'].strftime('%Y-%m-%d')}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nName: vm.box\\nPrice (USD): $31481.47\\nPrice (ETH): 10.0\\nDate: 2024-04-27 16:00:00+00:00\\n'"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highest_sold_domain_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
     "sales_metrics = [\n",
     "    {\"label\": \"Total Sales Volume \", \"value\":f\"${cumulative_box_vol.iloc[-1]:,.2f}\", \"unit\": \"\"},\n",
-    "    {\"label\": \"Highest Sold Domain \", \"value\":str(max_eth_sale_row), \"unit\": \"\"},\n",
+    "    {\"label\": \"Highest Sold Domain\", \"value\": highest_sold_domain_str, \"unit\": \"\"},\n",
     "    {\"label\": \"Average Sales Price \", \"value\":f\"${avg_box_sale:,.2f}\", \"unit\": \"\"}\n",
     "    \n",
     "]"
@@ -28971,6 +29035,15 @@
     "            ]) for i in range(min(len(dataframe), max_rows))\n",
     "        ])\n",
     "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latest_box_listings.drop(columns=['Unnamed: 0','chain.1','order_hash.1'], inplace=True)"
    ]
   },
   {
@@ -29237,7 +29310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -29255,7 +29328,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ca6ac7c710>"
+       "<IPython.lib.display.IFrame at 0x1ca7231fa50>"
       ]
      },
      "metadata": {},
