using correct host for render

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -18284,6 +18284,7 @@
       "predicted value: 1337.918250592203\n",
       "predicted value: 2560.052986420118\n",
       "predicted value: 1337.918250592203\n",
+      "predicted value: 1337.918250592203\n",
       "predicted value: 1337.918250592203\n"
      ]
     }
